messing with footer. fixed alignment, ul behaving funny

--- a/public/sass/stylesheets/footer.scss
+++ b/public/sass/stylesheets/footer.scss
@@ -3,31 +3,31 @@ $yellow : #ff8900;
 $blue : #086fa1;
 $red : #a31010;
 $black: #282828;
+$alt-grey: #ddd;
 
 $font-main : futura !important;
 $font-helper : 'Slabo 13px', serif !important;
 
 .footer {
-  width: 100%;
-  height: 200px;
-  background-color: $black;
+  margin-top: 5%;
+  background-color: $alt-grey;
   text-align: center;
   float: both;
-  color: white;
+  color: $black;
   li {
     text-align: center;
   }
 }
 
 .footer-col {
-  width: 25%;
-  border-style: solid;
-  border-width: 5px;
+  // margin: 1%;
+  padding: 1%;
 }
 
-.footer-col > li {
-  font-size: 0.2em;
-}
+
+// .footer-col > li {
+//   font-size: 0.2em;
+// }
 ul {
   list-style-type: none !important;
 }
@@ -37,44 +37,5 @@ ul {
   font-size: 0.6em;
 }
 
-.footer1 {
-  background-color: $grey;
-  width: 1000px;
-  height: 200px;
-}
 
-.footer2 {
-  background-color: $yellow;
-  width: 1000px;
-  height: 200px;
-}
 
-.footer3 {
-  background-color: $blue;
-  width: 1000px;
-  height: 200px;
-}
-
-.footer4 {
-  background-color: $red;
-  width: 1000px;
-  height: 200px;
-}
-
-.footer-wrapper {
-  max-height: 200px;
-  height: 200px;
-}
-
-.footer-outer {
-  position: relative;
-}
-
-.footer-ontop {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right:0;
-  pointer-events:none;
-}
